--- a/04-deployment/Pipfile
+++ b/04-deployment/Pipfile
@@ -4,22 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-cramjam = "==2.10.0"
-fastparquet = "==2024.11.0"
-fsspec = "==2025.5.1"
-joblib = "==1.5.1"
-numpy = "==2.3.0"
-packaging = "==25.0"
-pandas = "==2.3.0"
-pyarrow = "==20.0.0"
-python-dateutil = "==2.9.0.post0"
-pytz = "==2025.2"
-scipy = "==1.15.3"
-six = "==1.17.0"
-threadpoolctl = "==3.6.0"
-tzdata = "==2025.2"
-scikit-learn = "==1.7.0"
+scikit-learn = "==1.5.0"
 flask = "*"
+pandas = "*"
+numpy = "*"
+pyarrow = "*"
 
 [dev-packages]
 
